--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="instructions">Instructions<br><p/>
 <span id="game-instructions" class="clear-fix">
     This is the game of Jeopardy!!!<br> 
-    A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span>
+    A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>LandMark <br> Q:Known for the SpaceNeedle<br> A: What is Seattle</span>
                     <hr>
             </main>
                <div id='button'>
