--- a/index.html
+++ b/index.html
@@ -7,32 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="jep.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="jep.css">
     <title>Jeopardy</title>
 </head>
-    <header id="start-screen">
+<header id="start-screen">
     <p>Jeopardy</p>
-    </header>
+</header>
 
-        <body>
-            <main class="game-start">
-        <p class="instructions">Instructions<br><p/>
-<span id="game-instructions" class="clear-fix">
+<body>
+    <main class="game-start">
+        <p class="instructions">Instructions<br>
+            <p/>
+            <span id="game-instructions" class="clear-fix">
     This is the game of Jeopardy!!!<br> 
     A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>LandMark <br> Q:Known for the SpaceNeedle<br> A: What is Seattle</span>
-                    <hr>
-            </main>
-               <div id='button'>
-                <a href='./game.html' class="center-block, btn btn-md btn-success">Start Game</button></a>
-                </div></body><hr> 
-                
-                
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"
-integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>
- </body>
+            <hr>
+    </main>
+    <div id='button'>
+        <a href='./game.html' class="center-block, btn btn-md btn-success">Start Game</button></a>
+    </div>
+</body>
+<hr>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+</body>
 <br>
 <div class='footer'>copyright TCH180</footer>
-   
+
 </html>
